--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </h1>
             </li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li>
                 <a href="https://www.linkedin.com/in/prince-patel-71b166217/" target="_blank">
