my portfolio website version 1.2

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <section id="contact">
             <h2>Contact me</h2>
             <p>
-                I'm always interested in hearing about new teaching opportunities, writing curricula, or instructional
+                I'm always interested in hearing about new job opportunities, writing curricula, or instructional
                 design work.
             </p>
             <p><a href="mailto:princepatel.dev@gmail.com" class="button">Email me</a></p>
