my portfolio website version 1.3

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
     <section id="intro">
         <p class="name">Hi, my name is <span>Prince Patel.</span></p>
-        <h2>I create web application.</h2>
-        <p>I'm an educator,developer specializing in HTML, CSS,JS (MERN) and no-code technologies.</p>
+        <h2>I am a dedicated and detail-oriented developer.</h2>
+        <p>I'm an educator,developer specializing in HTML, CSS,JS and no-code technologies.</p>
         <p>Currently, I'm attending bootcamp at <a href="https://codebetter.in/index.html" target="_blank">Code Better
             </a>.</p>
     </section>
