--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                     <span class="sr-only">Github</span>
                 </a>
             </li>
-            <li><a href="https://www.dropbox.com/s/3z2hm5gu3v2lrfy/JenKramerCV.pdf?dl=0" class='button'>Resume</a></li>
+            <li><a href="https://drive.google.com/file/d/1F6PezADoiHPLavps1Qq4SY_ljS_Ujp82/view?usp=sharing"
+                    class='button'>Resume</a></li>
         </ul>
     </nav>
 
