--- a/index.html
+++ b/index.html
@@ -58,29 +58,58 @@
 
     <div class="gradient"></div>
 
+
+
     <!-- instructions in JavaScript block -->
     <div class="section-blue">
         <section id="projects">
             <h2>Projects I'm proud of</h2>
+
             <article>
                 <div class="text">
                     <h4>Latest Project</h4>
                     <h3>Dice Game</h3>
-                    <p class="blackbox">I created a simple dice game using HTML, CSS, and JavaScript, utilizing the
-                        concept of the DOM.<a href="https://dice-game-navy-alpha.vercel.app/">this</a>.</p>
+                    <p class="blackbox">I created a multipage hospital website (static)
+                        using HTML, CSS.<a href="https://dice-game-navy-alpha.vercel.app/">this</a>.
+                    </p>
                     <h4>Technologies used include:</h4>
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>JS</li>
+
                     </ul>
                 </div>
                 <img class="project-image" src="./img/5D1F5910-29EC-48BD-A471-63CDA909BE0C.png"
+                    alt="Screenshot of Dice Game." />
+            </article>
+
+            <article>
+                <div class="text">
+                    <h4>Latest Project</h4>
+                    <h3>Movie Search Application</h3>
+                    <p class="blackbox"> This React-based web application allows users to search for movies using the
+                        Open Movie Database API (OMDB). Upon submitting a movie title, the app fetches relevant
+                        information about the movie, including its poster (if available) and detailed information such
+                        as title, release year, genre, director, and plot summary.<a
+                            href="https://react-movie-search-2kqm.vercel.app/">this</a>.</p>
+                    <h4>Technologies used include:</h4>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                        <li>React Js</li>
+                        <li>API integration (OMDB api).</li>
+                    </ul>
+                </div>
+                <img class="project-image" src="./img/E569E95F-9A6D-4DD8-B12F-C9B012ED2257.jpeg"
                     alt="Screenshot of dice game." />
             </article>
 
 
             <!-- second project -->
+
+
 
             <article>
                 <div class="text">
