--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="sr-only">Github</span>
                 </a>
             </li>
-            <li><a href="https://drive.google.com/file/d/1zU1R2U9MWEhtvFT_9TjllkAnQsJknw8w/view?usp=sharing"
+            <li><a href="https://drive.google.com/file/d/1zU1R2U9MWEhtvFT_9TjllkAnQsJknw8w/view"
                     class='button'>Resume</a></li>
         </ul>
     </nav>
