Tic Tac Toe game added in portfolio

--- a/index.html
+++ b/index.html
@@ -68,6 +68,27 @@
             <article>
                 <div class="text">
                     <h4>Latest Project</h4>
+                    <h3>Tic Tac Toe</h3>
+                    <p class="blackbox">A simple React-based implementation of the classic Tic Tac Toe game. Players can
+                        take turns marking squares on the 3x3 grid, with the goal of getting three in a row. The game
+                        keeps track of the current state and updates the board accordingly.<a
+                            href="https://blog-post-card-one.vercel.app/">this</a>.</p>
+                    <h4>Technologies used include:</h4>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                        <li>React Js</li>
+                    </ul>
+                </div>
+                <img class="project-image" src="./img/C474457A-6C99-4A4B-8A2E-BF84A2DB6955.jpeg"
+                    alt="Screenshot of the card design." />
+            </article>
+
+
+            <article>
+                <div class="text">
+                    <h4>Latest Project</h4>
                     <h3>Dice Game</h3>
                     <p class="blackbox">I created a multipage hospital website (static)
                         using HTML, CSS.<a href="https://dice-game-navy-alpha.vercel.app/">this</a>.
