portfolio application updated

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <p class="blackbox">A simple React-based implementation of the classic Tic Tac Toe game. Players can
                         take turns marking squares on the 3x3 grid, with the goal of getting three in a row. The game
                         keeps track of the current state and updates the board accordingly.<a
-                            href="https://blog-post-card-one.vercel.app/">this</a>.</p>
+                            href="https://tic-tac-toe-swart-zeta-97.vercel.app/">this</a>.</p>
                     <h4>Technologies used include:</h4>
                     <ul>
                         <li>HTML</li>
