adding project ecommerce using react js

--- a/index.html
+++ b/index.html
@@ -65,6 +65,37 @@
         <section id="projects">
             <h2>Projects I'm proud of</h2>
 
+
+            <article>
+                <div class="text">
+                    <h4>Latest Project</h4>
+                    <h3>Product Planet</h3>
+                    <p class="blackbox">Product Planet is a comprehensive e-commerce platform built using React. It
+                        leverages a dummy product JSON API to fetch and display a diverse range of products. The
+                        application features robust routing capabilities, implemented using Create Browser Router,
+                        allowing users to navigate seamlessly between different pages.<a
+                            href="https://product-planet-woad.vercel.app/">this</a>.
+                    </p>
+                    <h4>Technologies used include:</h4>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                        <li>React JS</li>
+                        <li>Api integration</li>
+
+
+
+                    </ul>
+                </div>
+                <img class="project-image" src="./img/92B4DB26-BCB5-4446-8018-3C9C732F65C8.jpeg"
+                    alt="screen shot of product planeet" />
+            </article>
+
+
+
+
+
             <article>
                 <div class="text">
                     <h4>Latest Project</h4>
@@ -82,7 +113,7 @@
                     </ul>
                 </div>
                 <img class="project-image" src="./img/C474457A-6C99-4A4B-8A2E-BF84A2DB6955.jpeg"
-                    alt="Screenshot of the card design." />
+                    alt="Screenshot of the tic tac toe." />
             </article>
 
 
