--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 <body>
     <!-- instructions in JavaScript block -->
-
     <nav>
         <ul>
             <li>
@@ -43,7 +42,7 @@
                     <span class="sr-only">Github</span>
                 </a>
             </li>
-            <li><a href="https://drive.google.com/file/d/1Nw2tKOi3Avm9tE3Gldij-w9mGro6WvLc/view"
+            <li><a href="https://drive.google.com/file/d/1Nw2tKOi3Avm9tE3Gldij-w9mGro6WvLc/view?usp=sharing"
                     class='button'>Resume</a></li>
         </ul>
     </nav>
@@ -55,17 +54,11 @@
         <p>Currently, I'm attending bootcamp at <a href="https://codebetter.in/index.html" target="_blank">Code Better
             </a>.</p>
     </section>
-
     <div class="gradient"></div>
-
-
-
     <!-- instructions in JavaScript block -->
     <div class="section-blue">
         <section id="projects">
             <h2>Projects I'm proud of</h2>
-
-
             <article>
                 <div class="text">
                     <h4>Latest Project</h4>
