--- a/index.html
+++ b/index.html
@@ -62,12 +62,16 @@
             <article>
                 <div class="text">
                     <h4>Latest Project</h4>
-                    <h3>Product Planet</h3>
-                    <p class="blackbox">Product Planet is a comprehensive e-commerce platform built using React. It
-                        leverages a dummy product JSON API to fetch and display a diverse range of products. The
-                        application features robust routing capabilities, implemented using Create Browser Router,
-                        allowing users to navigate seamlessly between different pages.<a
-                            href="https://product-planet-woad.vercel.app/">this</a>.
+                    <h3>Food Planet</h3>
+                    <p class="blackbox">This application is a dynamic food delivery platform built using React, Redux,
+                        and state hooks.
+                        It seamlessly integrates with Swiggy's live API to provide users with real-time access to a vast
+                        array of restaurants, menus, and ordering options. The app offers a user-friendly interface for
+                        browsing local eateries, exploring diverse cuisines, and effortlessly placing orders. By
+                        utilizing Redux for efficient state management, the app ensures smooth performance and a
+                        responsive user experience.  
+
+                        .<a href="https://grocery-store-ruddy.vercel.app/">this</a>.
                     </p>
                     <h4>Technologies used include:</h4>
                     <ul>
@@ -81,8 +85,8 @@
 
                     </ul>
                 </div>
-                <img class="project-image" src="./img/92B4DB26-BCB5-4446-8018-3C9C732F65C8.jpeg"
-                    alt="screen shot of product planeet" />
+                <img class="project-image" src="./img/9932C78E-7AFD-478C-B1B1-1F238C508CBD.jpeg"
+                    alt="screen shot of food  planeet" />
             </article>
 
 
